@@ -1,3 +1,7 @@
+2002-11-19  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
+
+	* include/libbk.h: Add autoconf'd BK-IN6_IS_ADDR_MULTICAST.
+
 2002-11-18  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
 
 	* lib/b_ioh.c (bk_ioh_last_error): Get the last bkio errno.
